styles for chapter nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <div id="app">
 	<div class="menu-page">
 		<h1 id="magic-lens-documentation">Picturing Urban Renewal</h1>
-    <p>This site provides access to mockups and other draft online material in support of the NEH Digital Projects for the Public Prototype Phase &ldquo;Picturing Urban Renewal&rdquo; grant application. These pages are intended to accompany the written grant proposal and design document; further information about the mockups can be found in those documents. (Modern browser required &mdash; e.g. not IE 11)</p>
+    <p>This site provides access to mockups and other draft online material in support of the NEH Digital Projects for the Public Prototype Phase &ldquo;Picturing Urban Renewal&rdquo; grant application. These pages are intended to accompany the written grant proposal and design document; further information about the mockups can be found in those documents.</p>
+    
+    <p>Please note, although these mockups may appear resolved they are a rough draft vision for the website that, with funding from a Prototyping grant, we  plan to test, revise, and refine based on user testing and scholarly reviews. Nevertheless, this planning process, which brought together content, design, and technical expertise, provides us with a clear roadmap for moving forward.(Modern browser required &mdash; e.g. not IE 11)</p>
 
     <!-- graphic menu --> 
     <svg class="graphic-menu" version="1.1" xmlns="http://www.w3.org/2000/svg" 
