--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -20,26 +20,6 @@
 	integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
 	crossorigin=""></script>
 
-	<style type="text/css" media="screen">
-		#mapdiv img {border: none;}
-		.dropdown-menu{
-			display: none;
-		}
-		header.story-title nav#dropdown-parent {
-		  position: absolute;
-		  top: 1em;
-		  left: 1em;
-		}	
-		.dot-title {
-		  top: 50%;
-		  margin: 0;
-		  padding: 0;
-		  position: absolute;
-		  right: 1em;
-		  display: none;
-		}	
-	</style>
- 
 </head>
 
 <body>
@@ -63,6 +43,8 @@
 		<header class="story-title">
 			<h3 class="grid-title">Albany: Lost Places/Displaced People</h3>		
 			<h1>The Reaction to Redevelopment</h1>
+
+			<!-- chapters table of contents -->
 			<nav id="dropdown-parent"><a href="#">Chapters &rarr;</a>
 		      <ul class="dropdown-menu">
 				<li><a href="#chapter1">The Immediate Response</a></li>
