resolved side tabs, tweaked chapter drop down menu

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -101,12 +101,14 @@
 			<p>&nbsp;</p>
 			<p>Local newspaper editors immediately sent reporters out to collect man-on-the-street interviews from the South Mall area. The Albany Democratic Party organized a house-to-house canvass for the same purpose.</p>
 
-			<p class="poo">The goals and methods of reporters and political operatives differed dramatically. Owned by the same publisher, Albany&rsquo;s two local newspapers backed the State&rsquo;s South Mall plan with pro-development editorials and stories.  Reporters targeted an area characterized by small businesses and transient residents, where they found support for, or at least acceptance of, the State plan. By contrast, the Democratic canvassers catalogued opposition to the South Mall among an aging population of owner-occupiers and long-term tenants living near the Cathedral of the Immaculate Conception. Many of these residents were active in the Catholic Church and loyal to the party&rsquo;s leadership.
+			<p>The goals and methods of reporters and political operatives differed dramatically. Owned by the same publisher, Albany&rsquo;s two local newspapers backed the State&rsquo;s South Mall plan with pro-development editorials and stories.  Reporters targeted an area characterized by small businesses and transient residents, where they found support for, or at least acceptance of, the State plan. By contrast, the Democratic canvassers catalogued opposition to the South Mall among an aging population of owner-occupiers and long-term tenants living near the Cathedral of the Immaculate Conception. Many of these residents were active in the Catholic Church and loyal to the party&rsquo;s leadership.
+			</p>
 
+			<div class=sidebar-parent>
 				<span class="sidebar essay">
 					<a href="#">Demographics of Displacement</a>
 				</span>
-			</p>
+			</div>
 
 			<p>Both sets of interviews are skewed, but together, they provide a broader picture of how residents and business owners responded to news of their imminent dispossession. Some greeted the news with optimism, others with anxiety. Overall, a sense of inevitability prevailed.</p>
 
@@ -245,12 +247,14 @@
 				<p>Hy Rosen for the <i>Times Union.</i> From the NYS Library.</p>
 			</div>
 
-			<p class="poo">To the Governor and his supporters, Albany appeared blighted and in need of revitalization. For this, they blamed the city&rsquo;s Democratic leadership. The chairman of the Citizens United Reform Effort (CURE), a local opposition party, described the mayor&rsquo;s stand on the South Mall as &ldquo;starkly political.&rdquo; He accused the Democratic machine of thriving &ldquo;on decay and deterioration and the miseries of the people.&rdquo; Rule by favors and threats had its greatest impact on the city&rsquo;s poorest residents, and as NAACP official and South Mall resident Harry Vodery pointed out, African Americans bore the brunt of both threats and decay.
+			<p>To the Governor and his supporters, Albany appeared blighted and in need of revitalization. For this, they blamed the city&rsquo;s Democratic leadership. The chairman of the Citizens United Reform Effort (CURE), a local opposition party, described the mayor&rsquo;s stand on the South Mall as &ldquo;starkly political.&rdquo; He accused the Democratic machine of thriving &ldquo;on decay and deterioration and the miseries of the people.&rdquo; Rule by favors and threats had its greatest impact on the city&rsquo;s poorest residents, and as NAACP official and South Mall resident Harry Vodery pointed out, African Americans bore the brunt of both threats and decay.
+			</p>
 
+			<div class=sidebar-parent>
 				<span class="sidebar essay">
 					<a href="#">The Democratic Machine and Its Critics.</a>
 				</span>
-			</p>
+			</div>
 
 			<p>South Mall boosters argued that reconstruction would beautify Albany and bolster the city&rsquo;s flagging fortunes. The majority of South Mall residents appeared to agree, based on a CURE poll from the summer of 1962. Over the course of a week, 30 volunteers knocked on doors throughout the redevelopment area, asking two questions:</p>
 
@@ -419,12 +423,14 @@
 			<p>Lazarus Kontis, a long-time Hudson Avenue business owner, experienced a similar decline after losing both home and business to the South Mall. Even after closing shop and moving into a new second-floor apartment, Lazarus kept trying to walk down the stairs to the now non-existent store below, as he had every morning for the past 53 years. This loss appears to have triggered or accelerated a decline in health. In August 1966, three years after the move, Lazarus died, institutionalized and suffering from dementia.
 			</p>
 
-			<p class="poo">Psychologist Marc Fried analyzed the impact of displacement on the former residents of Boston&apos;s West End, a section similar in demographics to the South Mall redevelopment area. In 1963, Fried described being forcibly dispersed as a &ldquo;highly disturbing and disruptive&rdquo; experience evoking an emotional response akin to grief. &ldquo;It&apos;s just like a plant,&rdquo; one of his informants told him, &ldquo;when you tear up the roots, it dies!&rdquo; More recently, psychiatrist Mindy Fullilove diagnosed the trauma of displacement as &ldquo;root shock.&rdquo;
+			<p>Psychologist Marc Fried analyzed the impact of displacement on the former residents of Boston&apos;s West End, a section similar in demographics to the South Mall redevelopment area. In 1963, Fried described being forcibly dispersed as a &ldquo;highly disturbing and disruptive&rdquo; experience evoking an emotional response akin to grief. &ldquo;It&apos;s just like a plant,&rdquo; one of his informants told him, &ldquo;when you tear up the roots, it dies!&rdquo; More recently, psychiatrist Mindy Fullilove diagnosed the trauma of displacement as &ldquo;root shock.&rdquo;
+			</p>
 			
+			<div class=sidebar-parent>
 				<span class="sidebar essay">
 					<a href="../index.html?mocknum=21">Urban Renewal and &ldquo;Root Shock&rdquo;</a>
 				</span>
-			</p>
+			</div>
 
 			<div>
 				<img src="images/leonard-family.jpg"/>
@@ -530,12 +536,14 @@
 			
 			<p>To see more South Mall design drawings and other planning documents, visit the <a href="../index.html?mocknum=16">Visual Record</a> section of this website.</p>
 			
-			<p class="poo">Outside of Albany, reviews of the $250 million (estimated) capitol complex were considerably less kind. Mostly notably, an unsigned critique in the influential journal Progressive Architecture dismissed the South Mall design as &ldquo;an exercise in architectural pop art.&rdquo; The reviewer blamed the governor and his enablers for its faults. Despite pushback from Rockefeller supporters, the journal&rsquo;s editor stood by the critique, especially criticism of the governor&rsquo;s role in the design process. &ldquo;Quite a few architects are disturbed by this approach to planning,&rdquo; he said. &ldquo;Albany deserves the best, and I don&rsquo;t think it is getting the best.&rdquo;
+			<p>Outside of Albany, reviews of the $250 million (estimated) capitol complex were considerably less kind. Mostly notably, an unsigned critique in the influential journal Progressive Architecture dismissed the South Mall design as &ldquo;an exercise in architectural pop art.&rdquo; The reviewer blamed the governor and his enablers for its faults. Despite pushback from Rockefeller supporters, the journal&rsquo;s editor stood by the critique, especially criticism of the governor&rsquo;s role in the design process. &ldquo;Quite a few architects are disturbed by this approach to planning,&rdquo; he said. &ldquo;Albany deserves the best, and I don&rsquo;t think it is getting the best.&rdquo;
+			</p>
 
+			<div class=sidebar-parent>
 				<span class="sidebar essay">
 					<a href="#">Architectural Critics and the South Mall</a>
 				</span>
-			</p>
+			</div>
 			
 			<p>Despite criticism, the South Mall project moved inexorably forward.  By the end of 1963, the State had displaced the majority of area residents, and demolition was more than halfway complete.</p>
 
@@ -594,12 +602,14 @@
 				<p>Based on information collected by <i>Times Union</i> reporter William Kennedy, this October 1965 map uses stars to designate the homes of black families living outside of Albany&rsquo;s Arbor Hill and South End neighborhoods. Courtesy of the <i>Times Union.</i></p>
 			</div>
 
-			<p class="poo">Arthur and Yvonne Mitchell weathered over a year of insults and refusals before they found a new home on Victor Street. They were one of a group of roughly 82 middle-income black families living outside of Albany&rsquo;s increasingly crowded and dilapidated ghettoes. Black families with fewer economic and social resources were barred from most areas of the city. Taking advantage of their plight, unscrupulous landlords rented displaced families overpriced and substandard housing units.
+			<p>Arthur and Yvonne Mitchell weathered over a year of insults and refusals before they found a new home on Victor Street. They were one of a group of roughly 82 middle-income black families living outside of Albany&rsquo;s increasingly crowded and dilapidated ghettoes. Black families with fewer economic and social resources were barred from most areas of the city. Taking advantage of their plight, unscrupulous landlords rented displaced families overpriced and substandard housing units.
+			</p>
 
+			<div class=sidebar-parent>
 				<span class="sidebar essay">
 					<a href="#">William Kennedy&rsquo;s Slum Series</a>
 				</span>
-			</p>			
+			</div>
 
 			<div>
 				<img src="images/skinner.jpg"/>
@@ -613,12 +623,14 @@
 				<p>Unidentified rooming house tenant. Like him, most roomers were elderly, single, and on a limited budget. From the NYS Archives.</p>
 			</div>
 
-			<p class="poo">The destruction of Albany&rsquo;s Rooming House District created problems not only for owners but also their tenants. Numbering close to one thousand, this group of renters could afford little more than the $4-10 per week they typically paid for a place to sleep and wash up. Local social service agencies, particularly the Tuberculosis Association, predicted an increase in homelessness and a decline in public health, unless this lost housing were replaced. But neither local nor state authorities made plans to accommodate the city’s displaced roomers.
+			<p>The destruction of Albany&rsquo;s Rooming House District created problems not only for owners but also their tenants. Numbering close to one thousand, this group of renters could afford little more than the $4-10 per week they typically paid for a place to sleep and wash up. Local social service agencies, particularly the Tuberculosis Association, predicted an increase in homelessness and a decline in public health, unless this lost housing were replaced. But neither local nor state authorities made plans to accommodate the city’s displaced roomers.
+			</p>
 
+			<div class=sidebar-parent>
 				<span class="sidebar essay">
 					<a href="#">Albany&rsquo;s Rooming Houses and SRO Hotels.</a>
 				</span>
-			</p>
+			</div>
 
 		</div><!-- /narrative -->	
 
