added main scroll links, nixed map paragraph

--- a/stories/albany-displaced.html
+++ b/stories/albany-displaced.html
@@ -31,8 +31,10 @@
 			<li class="selected">
 				<a href="../index.html?mocknum=2">4 cities / 4 stories</a>
 			</li>
-			<li><a href="#">sights &amp; sounds</a></li>
-			<li><a href="#">maps</a></li>
+			<li>
+				<a href="../index.html?mocknum=6">sights &amp; sounds</a></li>
+			<li>
+				<a href="../index.html?mocknum=13">maps</a></li>
 			<li class="last-menu-item">
 				<a href="../index.html?mocknum=8">personal stories</a>
 			</li>
@@ -364,14 +366,13 @@
 				</p>
 			</div>
 
-			<p>&nbsp;</p>
+			<!-- <p>&nbsp;</p> -->
 
 		</div><!-- /caption-panel -->
 
 		<div class="narrative">	
 			<p>To learn more about the people who lived and worked in these lost neighborhoods, visit the <a href="../index.html?mocknum=11">Personal Stories</a> section of this website. To see the sights, check out the <a href="../index.html?mocknum=15">Visual Record</a> section. You can also <a href="../index.html?mocknum=14">Explore the Interactive Map</a>, which puts displaced people and demolished structures back where they once belonged.</p>
 
-			<p>&nbsp;</p>
 		</div><!-- /narrative -->	
 
 	</section> <!-- /chapter3 -->
