responsive text sizes for scroll story, format for map video page

--- a/map-demo.html
+++ b/map-demo.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="styles/css/UR-project-site-styles.css" />
 </head>
 
-<body class="stackedit">
-  <div class="stackedit__html">
+<body>
+  <div class="video-page">
     <h2>Picturing Urban Renewal Mockups</h2>
     <h1>Map Demo</h1>
     <p><a href="index.html">return to menu</a> </p>
