link to root-shock

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <a xlink:href="stories/albany-displaced.html#chapter3-title" >
           <image overflow="visible" width="150" height="130" xlink:href="mockups/menupics/scroll-story-4.jpg"  x="617" y="950"></image>
         </a>
-        <a xlink:href="stories/albany-displaced.html#chapter4-title" > <!-- Needs to go to id root shock -->
+        <a xlink:href="stories/albany-displaced.html#root-shock" >
           <image overflow="visible" width="150" height="212" xlink:href="mockups/menupics/scroll-story-5.jpg"  x="617" y="1081"></image>
         </a>
       </g>
