--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
         <a xlink:href="stories/albany-displaced.html" >
           <image overflow="visible" width="150" height="278" xlink:href="mockups/menupics/scroll-story-1.jpg"  x="617" y="91"></image>
         </a>
-        <a xlink:href="stories/albany-displaced.html#chapter1-title" >
+        <a xlink:href="stories/albany-displaced.html" >
           <image overflow="visible" width="150" height="91" xlink:href="mockups/menupics/scroll-story-2.jpg"  x="617" y="369"></image>
         </a>
-        <a xlink:href="stories/albany-displaced.html#hunters" >
+        <a xlink:href="stories/albany-displaced.html" >
           <image overflow="visible" width="150" height="491" xlink:href="mockups/menupics/scroll-story-3.jpg"  x="617" y="459"></image>
         </a>
-        <a xlink:href="stories/albany-displaced.html#chapter3-title" >
+        <a xlink:href="stories/albany-displaced.html" >
           <image overflow="visible" width="150" height="130" xlink:href="mockups/menupics/scroll-story-4.jpg"  x="617" y="950"></image>
         </a>
-        <a xlink:href="stories/albany-displaced.html#root-shock" >
+        <a xlink:href="stories/albany-displaced.html" >
           <image overflow="visible" width="150" height="212" xlink:href="mockups/menupics/scroll-story-5.jpg"  x="617" y="1081"></image>
         </a>
       </g>
@@ -181,8 +181,7 @@
       <nav> 
         <a
           v-if="currIndex === 13"
-          href="map-demo.html"
-        >Map Demo index: {{ currIndex }} |</a>
+          href="map-demo.html">View Map Demo Video |</a>
         <a
         v-if="prevExists"
         href="#"
