--- a/map-demo.html
+++ b/map-demo.html
@@ -12,7 +12,7 @@
   <div class="video-page">
     <h2>Picturing Urban Renewal Mockups</h2>
     <h1>Map Demo</h1>
-    <p><a href="index.html">return to menu</a> </p>
+    <p><a href="index.html?mocknum=14">return</a></p>
 
     <video width="1000" controls>
       <source src="media/map-demo.mp4" type="video/mp4">
