district label placement, conditional demo return

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <nav> 
         <a
           v-if="currIndex === 13"
-          href="map-demo.html">View Map Demo Video |</a>
+          href="map-demo.html?mockup=y">View Map Demo Video |</a>
         <a
         v-if="prevExists"
         href="#"
